2004-11-25  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: URL re fix

2004-11-24  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Removed /jest in favor of /ot/?me for /nolog shorthand.

2004-11-23  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Reload/Restart should work again now.

2004-11-23  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Added /jest for /nolog/me; /memo catcher
	* tkchat.tcl: Small fixes for reload script

2004-11-22  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Started removing the web scraper code to complete
	the transition to jabber and make further improvements easier.

2004-11-18  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Completed color fading on nolog messages.

2004-11-18  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Debugging stuff removed.
	* tkchat.tcl: (jabber) Whiteboard is back.
	* tkchat.tcl: Add whiteboard enable menu item

2004-11-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Primitive /userinfo support for tkjabber.
	* tkchat.tcl: Added support for SSL without proxy. Use port 5223
	or all.tclers.tk:443. Added port hinting in the dialog.

2004-11-17  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: jabber: fix ~ in URL recognition regexp.
	* tkchat.tcl: reformat jabber MsgCB to remove redundant code.
	* tkchat.tcl: allow sending to people not in the conference.

2004-11-16  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: jabber: add ~ to the URL recognition regexp.
	
2004-11-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Babelfish is now only initialized if the user clicks
	on the Translate selection menu item. 
	Oops. Forgot the context menu.

2004-11-15  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: jabber: logoff now works correctly; colors for ijchain
	users; enabled keep alive for all connection types; prevent sending
	/userinfo; prevent history from loading twice; 
