@@ -1,3 +1,7 @@
+2004-11-26  Pascal Scheffers  <pascal@scheffers.net>
+
+	* tkchat.tcl: First attempt at making tkchat work on a PockectPC
+
 2004-11-25  Pascal Scheffers  <pascal@scheffers.net>
 
 	* tkchat.tcl: URL re fix
